# secret-cmd

./: .gitignore  Cargo.toml
src/: main.rs
src/config/: cli.yml
src/controllers/: mod.rs  notes_controller.rs  session_controller.rs
src/data/migrations/2017-09-07-095320_create_notes/: down.sql  up.sql
src/db/migrations/2017-09-07-095320_create_notes/: up.sql
src/db/migrations/2017-09-14-075151_create_metas/: down.sql  up.sql
src/initializers/: database.rs  db_schema.rs  globals.rs  mod.rs
src/models/: meta.rs  mod.rs  note.rs
src/shared/: globals.rs  schema.rs
