[package]
name = "secret-cmd"
version = "0.1.0"
authors = ["Nami.WANG <namiheike@gmail.com>"]

[dependencies]

clap = {version = "2.26.0", features = ["yaml"]}

diesel = { version = "0.15.0", features = ["sqlite"] }
diesel_codegen = { version = "0.15.0", features = ["sqlite"] }

uuid = { version = "0.5", features = ["v4"] }
