[package]
name = "secret-cmd"
version = "0.1.0"
authors = ["Nami.WANG <namiheike@gmail.com>"]

[dependencies]

log = "0.3"

uuid = { version = "0.5", features = ["v4"] }

clap = {version = "2.26.0", features = ["yaml"]}

diesel = { version = "0.15.0", features = ["sqlite"] }
diesel_codegen = { version = "0.15.0", features = ["sqlite"] }

prettytable-rs = "^0.6"
